/*
 * Copyright (c) 2018 Thapovan info Systems
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;

package com.thapovan.orion.proto;

import "google/protobuf/Struct.proto";

enum LogLevel {
    DEBUG = 0;
    INFO = 1;
    WARN = 2;
    ERROR = 3;
    CRITICAL = 4;
}


message StartEvent {
    int64 event_id = 1;
    oneof metadata {
        google.protobuf.Struct protoStruct = 2;
        string jsonString = 3;
    }
}

message EndEvent {
    int64 event_id = 1;
    oneof metadata {
        google.protobuf.Struct protoStruct = 2;
        string jsonString = 3;
    }
}

message LogEvent {
    int64 event_id = 1;
    LogLevel level = 2;
    string message = 3;
    oneof metadata {
        google.protobuf.Struct protoStruct = 4;
        string jsonString = 5;
    }
}